--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -14,6 +14,7 @@ jobs:
             sabnzbd
             scripts
             tools
+            builder
             tests
             --line-length=120
             --target-version=py36
