--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -54,7 +54,7 @@ jobs:
         name: Windows installer
     - name: Import codesign certificates
       uses: apple-actions/import-codesign-certs@v1
-      if: runner.os == 'macOS'
+      if: runner.os == 'macOS' && github.event_name == 'push'
       with:
         p12-file-base64: ${{ secrets.CERTIFICATES_P12 }}
         p12-password: ${{ secrets.CERTIFICATES_P12_PASSWORD }}
