--- a/tests/data/tavern/api_queue_format.yaml
+++ b/tests/data/tavern/api_queue_format.yaml
@@ -55,6 +55,7 @@ stages:
           timeleft: "0:00:00"
           eta: "unknown"
           refresh_rate: !re_match "[0-9]*"
+          interface_settings: "!anystr"
           scripts: !anylist
           categories: !anylist
           rating_enable: !anybool
@@ -176,6 +177,7 @@ stages:
             <timeleft>0:00:00</timeleft>
             <eta>unknown</eta>
             <refresh_rate>!anything</refresh_rate>
+            <interface_settings>!anything</interface_settings>
             <scripts>
             <script>!anystr</script>
             </scripts>
