--- a/tests/data/tavern/api_queue_empty.yaml
+++ b/tests/data/tavern/api_queue_empty.yaml
@@ -54,6 +54,7 @@ stages:
           timeleft: "0:00:00"
           eta: "unknown"
           refresh_rate: !re_match "[0-9]*"
+          interface_settings: !re_match ".*"
           scripts: !anylist
           categories: !anylist
           rating_enable: !anybool
@@ -151,6 +152,7 @@ stages:
             <timeleft>0:00:00</timeleft>
             <eta>unknown</eta>
             <refresh_rate>!anything</refresh_rate>
+            <interface_settings>!anything</interface_settings>
             <scripts>!anystr</scripts>
             <categories>!anystr</categories>
             <rating_enable>!anybool</rating_enable>
