--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -6,6 +6,8 @@ jobs:
   build_windows:
     name: Build Windows binary
     runs-on: windows-latest
+    env:
+      AUTOMATION_GITHUB_TOKEN: ${{ secrets.AUTOMATION_GITHUB_TOKEN }}
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.9 (64bit)
@@ -57,9 +59,8 @@ jobs:
         path: "*-win32-bin.zip"
         name: Windows Windows standalone binary (32bit)
     - name: Prepare official release
+      if: env.AUTOMATION_GITHUB_TOKEN
       run: python builder/package.py release
-      env:
-        GITHUB_TOKEN: ${{ secrets.AUTOMATION_GITHUB_TOKEN }}
 
   build_macos:
     name: Build macOS binary
@@ -68,6 +69,7 @@ jobs:
       SIGNING_AUTH: ${{ secrets.SIGNING_AUTH }}
       NOTARIZATION_USER: ${{ secrets.NOTARIZATION_USER }}
       NOTARIZATION_PASS: ${{ secrets.NOTARIZATION_PASS }}
+      AUTOMATION_GITHUB_TOKEN: ${{ secrets.AUTOMATION_GITHUB_TOKEN }}
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.9
@@ -96,7 +98,5 @@ jobs:
         path: "*-osx.dmg"
         name: macOS binary (not notarized)
     - name: Prepare official release
+      if: env.AUTOMATION_GITHUB_TOKEN
       run: python builder/package.py release
-      env:
-        GITHUB_TOKEN: ${{ secrets.AUTOMATION_GITHUB_TOKEN }}
-
