--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -40,24 +40,24 @@ jobs:
       with:
         path: "*-win-setup.exe"
         name: Windows installer
-    - name: Set up Python 3.9 (32bit)
+    - name: Set up Python 3.8 (32bit/legacy)
       uses: actions/setup-python@v2
       with:
-        python-version: 3.9
+        python-version: 3.8
         architecture: x86
-    - name: Install Python dependencies (32bit)
+    - name: Install Python dependencies (32bit/legacy)
       run: |
         python --version
         pip install --upgrade pip wheel
         pip install --upgrade -r requirements.txt
         pip install --upgrade -r builder/requirements.txt
-    - name: Build Windows standalone binary (32bit)
+    - name: Build Windows standalone binary (32bit/legacy)
       run: python builder/package.py binary
-    - name: Upload Windows standalone binary (32bit)
+    - name: Upload Windows standalone binary (32bit/legacy)
       uses: actions/upload-artifact@v2
       with:
         path: "*-win32-bin.zip"
-        name: Windows Windows standalone binary (32bit)
+        name: Windows Windows standalone binary (32bit/legacy)
     - name: Prepare official release
       if: env.AUTOMATION_GITHUB_TOKEN
       run: python builder/package.py release
