--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -81,13 +81,16 @@ jobs:
       id: cache-python-download
       uses: actions/cache@v2
       with:
-        path: python.pkg
-        key: Python-${{ env.PYTHON_VERSION }}
+        path: python_temp.pkg
+        key: Python-macOS-${{ env.PYTHON_VERSION }}
     - name: Get Python
       if: steps.cache-python-download.outputs.cache-hit != 'true'
-      run: curl https://www.python.org/ftp/python/${PYTHON_VERSION}/python-${PYTHON_VERSION}-macosx10.9.pkg -o "python.pkg"
+      run: curl https://www.python.org/ftp/python/${PYTHON_VERSION}/python-${PYTHON_VERSION}-macosx10.9.pkg -o "python_temp.pkg"
     - name: Install Python
-      run: sudo installer -pkg python.pkg -target /
+      # Need to copy the pkg because the installer command removes it, breaking the cache
+      run: |
+        cp python_temp.pkg python.pkg
+        sudo installer -pkg python.pkg -target /
     - name: Install Python dependencies
       run: |
         python3 --version
