--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -77,20 +77,10 @@ jobs:
       MACOSX_DEPLOYMENT_TARGET: 10.9
     steps:
     - uses: actions/checkout@v2
-    - name: Cache Python download
-      id: cache-python-download
-      uses: actions/cache@v2
-      with:
-        path: python_temp.pkg
-        key: Python-macOS-${{ env.PYTHON_VERSION }}
     - name: Get Python
-      if: steps.cache-python-download.outputs.cache-hit != 'true'
-      run: curl https://www.python.org/ftp/python/${PYTHON_VERSION}/python-${PYTHON_VERSION}-macosx10.9.pkg -o "python_temp.pkg"
+      run: curl https://www.python.org/ftp/python/${PYTHON_VERSION}/python-${PYTHON_VERSION}-macosx10.9.pkg -o "python.pkg"
     - name: Install Python
-      # Need to copy the pkg because the installer command removes it, breaking the cache
-      run: |
-        cp python_temp.pkg python.pkg
-        sudo installer -pkg python.pkg -target /
+      run: sudo installer -pkg python.pkg -target /
     - name: Install Python dependencies
       run: |
         python3 --version
