--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -87,7 +87,7 @@ jobs:
       if: steps.cache-python-download.outputs.cache-hit != 'true'
       run: curl https://www.python.org/ftp/python/${PYTHON_VERSION}/python-${PYTHON_VERSION}-macosx10.9.pkg -o ~/python.pkg
     - name: Install Python
-      run: sudo installer -pkg ~/python.pkg -target /Applications
+      run: sudo installer -pkg ~/python.pkg -target /
     - name: Install Python dependencies
       run: |
         python3 --version
