adding requests for requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,9 @@ portend
 chardet
 notify2
 
+# Support for SickGear https://github.com/SickGear/SickGear/blob/master/autoProcessTV/autoProcessTV.py
+requests>=2.25.0
+
 # Windows system integration
 pywin32>=227; sys_platform == 'win32'
 
