--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -22,7 +22,7 @@ parts:
     python-version: python3
     requirements: [requirements.txt]
     stage-packages: [python3-dev, libdb5.3, unrar, p7zip-full, par2]
-    build-packages: [libffi-dev, python3-dev, libssl-dev]
+    build-packages: [libffi-dev, python3-dev, libssl-dev, cargo]
     override-build: |
       snapcraftctl set-version $(grep -oP '(?<=^Version: ).*' PKG-INFO)
       snapcraftctl build
