--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ cherrypy
 portend
 chardet
 notify2
-guessit>=3.1.0  # https://github.com/guessit-io/guessit/pull/536 needed for sample detection
+guessit>=3.1.0
 
 # Windows system integration
 pywin32>=227; sys_platform == 'win32'
