--- a/.github/workflows/integration_testing.yml
+++ b/.github/workflows/integration_testing.yml
@@ -27,7 +27,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install system dependencies
       if: runner.os == 'Linux'
-      run: sudo apt-get install unrar p7zip-full par2 chromium-chromedriver
+      run: sudo apt-get install unrar p7zip-full par2
     - name: Install Python dependencies
       run: |
         python --version
