--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -142,3 +142,21 @@ jobs:
     - name: Prepare official release
       if: env.AUTOMATION_GITHUB_TOKEN && startsWith(github.ref, 'refs/tags/')
       run: python3 builder/package.py release
+
+  release_snap:
+    name: Release Snap
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
+    env:
+      SNAP_TOKEN: ${{ secrets.SNAP_TOKEN }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.x"
+      - name: Release latest available Snap
+        run: |
+          sudo snap install snapcraft --classic
+          echo "${SNAP_TOKEN}" | snapcraft login --with -
+          python3 snap/local/release_snap.py
