--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -91,39 +91,27 @@ jobs:
     - name: Install Python
       run: sudo installer -pkg ~/python.pkg -target /
     - name: Install Python dependencies
-      # cffi will pick up the single-arch libffi from Homebrew, while Apple provides universal2-version
-      # of libffi with XCode. So we forcefully have to remove the Homebrew one.
-      # Because building cryptography is hard, and we cannot force pip to fetch universal2 version we
-      # first install the x86 version (and it's dependencies) and then manually fetch the universal2 build
-      # https://github.com/pyca/cryptography/issues/5918
+      # We have to manually install a few packages:
+      # 1.  cffi will pick up the single-arch libffi from Homebrew, while Apple provides universal2-version
+      #     of libffi with XCode. So we forcefully have to remove the Homebrew one.
+      # 2.  Because building cryptography is hard, and we cannot force pip to fetch universal2 version we
+      #     first install the x86 version (and it's dependencies) and then manually fetch the universal2 build
+      #     https://github.com/pyca/cryptography/issues/5918
+      # 3.  We need to build the PyInstaller bootloader from sources:
+      #     https://github.com/pyinstaller/pyinstaller/issues/6235
       run: |
-        brew uninstall libffi --ignore-dependencies
         python3 --version
         pip3 install --upgrade pip wheel
+        
+        brew uninstall libffi --ignore-dependencies
         ARCHFLAGS="-arch x86_64 -arch arm64" pip3 install --upgrade cffi --no-binary cffi
         pip3 install --upgrade -r requirements.txt --no-binary sabyenc3
+        
         pip3 uninstall cryptography -y
         pip3 download cryptography --platform macosx_10_10_universal2 --only-binary :all: --no-deps --dest .
         pip3 install cryptography --no-cache-dir --no-index --find-links .
-        pip3 install --upgrade -r builder/requirements.txt
-    - name: Checkout PyInstaller
-      # We need to build the PyInstaller bootloader from sources:
-      # https://github.com/pyinstaller/pyinstaller/issues/6235
-      uses: actions/checkout@v2
-      with:
-        repository: pyinstaller/pyinstaller
-        path: pyinstaller
-    - name: Build PyInstaller bootloader for macOS 10.9 support
-      # Make sure we checkout the latest stable release
-      run: |
-        python3 --version
-        cd pyinstaller/bootloader
-        git fetch --tags
-        git checkout $(git describe --tags $(git rev-list --tags --max-count=1))
-        python3 ./waf all
-        cd ..
-        python3 -m pip install .
-        cd ..
+        
+        PYINSTALLER_COMPILE_BOOTLOADER=1 pip3 install --upgrade -r builder/requirements.txt --no-binary pyinstaller
     - name: Import macOS codesign certificates
       uses: apple-actions/import-codesign-certs@v1
       if: env.SIGNING_AUTH
